tests/hostNetwork/allowed.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-host-networking-allowed
  labels:
    app: nginx-host-networking
spec:
  hostNetwork: false
  containers:
  - name: nginx
    image: nginx
