tests/hostNetwork/disallowed.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-host-networking-disallowed
  labels:
    app: nginx-host-networking
spec:
  hostNetwork: true
  containers:
  - name: nginx
    image: nginx
