tests/hostNetwork/kyverno.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: psp-host-namespace
spec:
  validationFailureAction: enforce
  rules:
    - name: host-namespaces
      match:
        resources:
          kinds:
            - Pod
      validate:
        message: >-
          Sharing the host namespaces is disallowed. The field spec.hostNetwork 
          must not be set to true.
        pattern:
          spec:
            =(hostNetwork): "false"
